apps/paperless/base/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:latest
          name: paperless
          ports:
            - name: http 
              containerPort: 8000
              protocol: TCP
          resources:
            limits: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-pvc
              subPath: 716a7a59-c361-48a1-ae89-f935919f7e59/app
            - mountPath: /usr/src/paperless/media
              name: paperless-media
            - mountPath: /usr/src/paperless/consume
              name: paperless-pvc
              subPath: 716a7a59-c361-48a1-ae89-f935919f7e59/consume
        - image: docker.io/library/redis:7
          name: paperless-broker
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            limits:
              cpu: "0.1"
              memory: "250M"
      restartPolicy: Always
      volumes:
        - name: paperless-pvc
          persistentVolumeClaim:
            claimName: paperless-pvc
        - name:  paperless-media
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/service/paperless/media
            readOnly: false
