apps/paperless/base/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database
  name: database
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - image: docker.io/library/postgres:13
          name: database
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: paperless-pvc
              subPath: 716a7a59-c361-48a1-ae89-f935919f7e59/pgdata
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: paperless-pvc
          persistentVolumeClaim:
            claimName: paperless-pvc
