apps/paperless/base/ftp.yaml

apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: ftp-server
  namespace: paperless
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ftp-server
    spec:
      containers:
      - name: ftp-server-container
        image: fauria/vsftpd
        ports:
        - containerPort: 21
          protocol: TCP
          name: ftp-server
        volumeMounts:
          - mountPath: "/home/vsftpd"
            name: cache-volume
        resources: {}
      volumes:
        - name: cache-volume
          emptyDir:
            sizeLimit: 100Mi
