apps/paperless/base/paperless-broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    app: paperless-broker
  name: paperless-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-broker
  strategy: {}
  template:
    metadata:
      labels:
        app: paperless-broker
    spec:
      containers:
        - image: docker.io/library/redis:7
          name: paperless-broker
          resources: {}
      restartPolicy: Always
status: {}
