apps/paperless/base/paperless-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-db
  name: paperless-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: paperless
            - name: POSTGRES_USER
              valueFrom:
               secretKeyRef:
                 name: paperless-secret
                 key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
               secretKeyRef:
                 name: paperless-secret
                 key: POSTGRES_PASSWORD
          image: docker.io/library/postgres:13
          name: paperless-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: paperless-db-pvc
      restartPolicy: Always
      volumes:
        - name: paperless-db-pvc
          persistentVolumeClaim:
            claimName: paperless-db-pvc
