apps/paperless/base/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-webserver
  name: paperless-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-webserver
    spec:
      containers:
        - image: docker.io/library/postgres:13
          name: paperless-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: paperless-pvc
              subPath: pg-data
          ports:
            - containerPort: 5432
              protocol: TCP
        - image: ghcr.io/paperless-ngx/paperless-ngx:latest
          name: paperless-webserver
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-pvc
              subPath: app
            - mountPath: /usr/src/paperless/media
              name: paperless-pvc
              subPath: media
            - mountPath: /usr/src/paperless/consume
              name: paperless-webserver-consume
              subPath: consume
        - image: docker.io/library/redis:7
          name: paperless-broker
          ports:
            - containerPort: 6379
              protocol: TCP
          resources: {}
      restartPolicy: Always
      volumes:
        - name: paperless-pvc
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/service/paperless
            readOnly: false
