apps/paperless/base/single-pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-webserver
  name: paperless-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-webserver
    spec:
      containers:
        - image: docker.io/library/postgres:13
          name: paperless-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: paperless-db-pvc
        - image: ghcr.io/paperless-ngx/paperless-ngx:latest
          name: paperless-webserver
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-app-pvc
            - mountPath: /usr/src/paperless/media
              name: paperless-webserver-media
            - mountPath: /usr/src/paperless/consume
              name: paperless-webserver-consume
        - image: docker.io/library/redis:7
          name: paperless-broker
          resources: {}
      restartPolicy: Always
      volumes:
        - name: paperless-app-pvc
          persistentVolumeClaim:
            claimName: paperless-app-pvc
        - name: paperless-webserver-media
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/paperless
            readOnly: false
        - name: paperless-webserver-consume
          persistentVolumeClaim:
            claimName: shared-ftp-pvc
        - name: paperless-db-pvc
          persistentVolumeClaim:
            claimName: paperless-db-pvc
