apps/paperless/base/smb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: smb-server
  name: smb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smb-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smb-server
    spec:
      containers:
        - name: smb-server
          image: ghcr.io/servercontainers/samba
          ports:
            - containerPort: 445
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /shares/paperless
              name: shared-smb-pvc
      restartPolicy: Always
      volumes:
        - name: shared-smb-pvc
          persistentVolumeClaim:
            claimName: shared-smb-pvc
