apps/paperless/base/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless-webserver
  name: paperless-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-webserver
    spec:
      containers:
        - env:
            - name: DEBUG
              value: "false"
            - name: PAPERLESS_ALLOWED_HOSTS
              value: steffenillium.de,localhost
            - name: PAPERLESS_CONSUMER_RECURSIVE
              value: "true"
            - name: PAPERLESS_CORS_ALLOWED_HOSTS
              value: http://localhost:8000
            - name: PAPERLESS_DBHOST
              value: paperless-db.paperless.svc.cluster.local
            - name: PAPERLESS_ENABLE_HTTP_REMOTE_USER
              value: "true"
            - name: PAPERLESS_OCR_LANGUAGE
              value: deu
            - name: PAPERLESS_OCR_LANGUAGES
              value: eng deu
            - name: PAPERLESS_OCR_ROTATE_PAGES
              value: "true"
            - name: PAPERLESS_OCR_ROTATE_PAGES_THRESHOLD
              value: "10"
            - name: PAPERLESS_REDIS
              value: redis://paperless-broker.paperless.svc.cluster.local:6379
            - name: PAPERLESS_TIME_ZONE
              value: Europe/Berlin
            - name: PAPERLESS_URL
              value: https://documents.steffenillium.de
            - name: PAPERLESS_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: paperless-secret
                  key: PAPERLESS_SECRET_KEY
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          livenessProbe:
            exec:
              command:
                - 'curl -fs -S --max-time "2" http://localhost:8000'
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: paperless-webserver
          ports:
            - containerPort: 8000
              hostPort: 8300
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-app-pvc
            - mountPath: /usr/src/paperless/media
              name: paperless-webserver-media
            - mountPath: /usr/src/paperless/consume
              name: paperless-webserver-consume
      restartPolicy: Always
      volumes:
        - name: paperless-app-pvc
          persistentVolumeClaim:
            claimName: paperless-app-pvc
        - name: paperless-webserver-media
          nfs:
            server: 192.168.178.4
            path: /mnt/storage/paperless
            readOnly: false
        - name: paperless-webserver-consume
          persistentVolumeClaim:
            claimName: shared-ftp-pvc
