apps/paperless/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless
  name: paperless
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: paperless
status:
  loadBalancer: {}
