apps/paperless/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  name: database
spec:
  ports:
    - name: http
      port: 5432
      targetPort: http
  selector:
    app: database
status:
  loadBalancer: {}
