apps/paperless/base/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-service
  name: paperless-service
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: paperless-webserver
status:
  loadBalancer: {}
