apps/paperless/base/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: paperless-webserver
  name: paperless_webserver
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: paperless-webserver
status:
  loadBalancer: {}
