apps/paperless/base/paperless-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: paperless
spec:
  entryPoints:
    - web-local
    - websecure-local
  routes:
  - match: Host(`documents.steffenillium.de`)
    kind: Rule
    services:
    - name: paperless-service
      port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress-front
  namespace: paperless
spec:
  entryPoints:
    - websecure-front
  routes:
  - match: Host(`documents.steffenillium.de`)
    kind: Rule
    # middlewares:
    #   - name: authentik-middleware
    #     namespace: authentik
    services:
    - name: paperless-service
      port: http
