apps/paperless/base/smb-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: smb-ingress
  labels:
    expose: "false"
  namespace: paperless
spec:
  entryPoints:
    - smb
  routes:
  - match: HostSNI(`documents-smb.steffenillium.de`)
    services:
    - name: smb-server-service
      port: 445
  tls: {}
