apps/paperless/base/webserver-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: paperless
  labels:
    expose: "true"
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`documents.steffenillium.de`)
    kind: Rule
    services:
    - name: paperless-service
      port: 8000
